<resources>
    <string name="app_name">Simple Led Torch</string>
    <string name="crash_report">Crash detected, sending report</string>

    <string name="TextInfoContentShake">Shake\nor\npush me</string>
    <string name="TextInfoContentNoShake">\nPush me\n</string>
    <string name="TextInfoContentNoTouch">\nTouch disabled\n</string>

    <string name="buttonFlashLabel2">Turn on the led</string>
    <!--<string name="togglebuttonLenOff">Led ON</string>-->
    <!--<string name="togglebuttonLenOn">Led OFF</string>-->
    <string name="labelLedNotSupported">Led not supported</string>
    <string name="action_about">About</string>
    <string name="ShakeOn">Shake mode activated</string>
    <string name="ShakeOff"></string>

    <string name="Autore">Gabriele Galluzzo\nsupported by Sofia Galluzzo</string>
    <string name="simpleLedTorchWidgetName">Simple Led Torch</string>
    <string name="title_activity_settings">Settings</string>

    <!-- PREFERENCES SECTION -->
    <string name="acra_enable">Send crash report to developer</string>
    <string name="crash_preference">Send report crash</string>
    <string name="pref_disable_crash_default">true</string>

    <string name="shake_preference">shake_preference</string>
    <string name="shake_category_title">Shake to turn on or off the camera led</string>
    <string name="shake_category_developer_title">Help improve application</string>
    <string name="startup_category_title">Help improve application</string>

    <string name="startup_preference">startup_preference</string>
    <string name="startup_checkbox_title">Light on at startup</string>
    <string name="pref_startup_default">true</string>

    <string name="shake_checkbox_title">Shake to toggle led</string>
    <string name="pref_shake_default">false</string>

    <string name="pref_number_shakes">pref_number_shakes</string>
    <string name="pref_number_shakes_title">Number of shakes to toggle led</string>
    <string name="pref_number_shakes_summary">Number of shakes</string>
    <string name="pref_number_shakes_default">4</string>

    <string name="pref_shake_window">pref_shake_window</string>
    <string name="pref_shake_window_title">Time window to recognize a shake</string>
    <string name="pref_shake_window_summary">Time window for shaking</string>
    <string name="pref_shake_window_default">400</string>


    <string name="pref_shake_debounce">pref_shake_debounce</string>
    <string name="pref_shake_debounce_title">Time window to reset the shake logic</string>
    <string name="pref_shakes_debounce_summary">Shake debounce window</string>
    <string name="pref_shakes_debounce_default">800</string>

    <string name="action_settings">Settings</string>

    <string name="action_shake_menu">Shake Menu</string>
    <string name="action_touch_menu">Touch Menu</string>

</resources>
