<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_shake_menu"
        android:icon="@drawable/ic_radio_button_on_white_24dp"
        android:title="@string/action_shake_menu"
        app:showAsAction="always" />

    <item android:id="@+id/action_touch_menu"
        android:icon="@drawable/ic_lock_open_white_24dp"
        android:title="@string/action_touch_menu"
        app:showAsAction="always" />

</menu>